[forms] adapt the inline render

--- a/TODO
+++ b/TODO
@@ -28,6 +28,7 @@ Forms
 * errors display must to be adapt
 * hide/remplace "en cours de validation..."
 * show the required fields
+* adapt the relatedEntities table
 
 Facet
 -----
